done some Correction

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <th></th>
             </tr>
             <tr class="data-table">
-              <td class="td-head">WAR OF CREATIVE MINDS</td>
+              <td class="td-head">WAR OF CREATIVE MINDS<br><p>(COLLECTION OF NON- WEARABLE )</p></td>
               <td>MARCH</td>
               <td>4999- PER GARMENTS</td>
               <td>
@@ -129,19 +129,19 @@
                 <td>11999- PER GARMENTS</td>
                 <td>
                   <P class="place">
-                      U.P,Agra
+                      U.P, Agra
                   </P>
                   <P class="place">
-                      M.P,Bhopal
+                      M.P, Bhopal
                   </P>
                   <P class="place">
-                    TELANGANA,Hyderabad
+                    TELANGANA, Hyderabad
                   </P>
-                  <p class="place">KARNATAKA,Banglore</p>
-                  <p class="place">GUJARAT,Gandhi Nagar</p>
-                  <p class="place">RAJASTHAN,Jaipur</p>
-                  <p class="place">JHARKHAND,Ranchi</p>
-                  <p class="place">TAMIL NADU,Chennai</p>
+                  <p class="place">KARNATAKA, Banglore</p>
+                  <p class="place">GUJRAT, Gandhi Nagar</p>
+                  <p class="place">RAJASTHAN, Jaipur</p>
+                  <p class="place">JHARKHAND, Ranchi</p>
+                  <p class="place">TAMIL NADU, Chennai</p>
                 </td>
                 
                 <td>
